--- a/sahr/templates/sahr/index.html
+++ b/sahr/templates/sahr/index.html
@@ -1,47 +1,42 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="csrf-token" content="{{ csrf_token }}"> <!-- Пример мета-тега с CSRF-токеном -->
-    <title>Поиск</title>
+    <title>САХР</title>
+    <h1>Тестовая страница САХР</h1>
+   
 </head>
 <body>
+    <!-- Форма для поиска -->
     <form id="searchForm">
         <input type="text" name="query" placeholder="Введите запрос" required>
         <button type="submit">Отправить</button>
     </form>
 
-    <script>
-        // Функция для получения CSRF-токена из мета-тега
-        function getCSRFToken() {
-            const metaTag = document.querySelector('meta[name="csrf-token"]');
-            return metaTag ? metaTag.getAttribute('content') : '';
-        }
-
-        document.getElementById('searchForm').addEventListener('submit', function(event) {
-            event.preventDefault(); // Предотвращаем отправку формы
-
-            const query = document.querySelector('input[name="query"]').value;
-            const csrfToken = getCSRFToken();
-
-            fetch('/sahr/sahr_find/', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'X-CSRFToken': csrfToken // Отправляем CSRF-токен в заголовке
-                },
-                body: JSON.stringify({ query: query })
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log('Success:', data);
-                // Здесь вы можете обработать ответ от сервера
-            })
-            .catch((error) => {
-                console.error('Error:', error);
-            });
-        });
-    </script>
+    <!-- Форма для проверки артикула -->
+    <form id="articleForm">
+        <label for="article">Артикул:</label>
+        <input type="text" id="article" name="article" required>
+        <br>
+        <label for="title">Название:</label>
+        <input type="text" id="title" name="title" readonly>
+        <br>
+        <label for="comment">Комментарий:</label>
+        <input type="text" id="comment" name="comment">
+        <br>
+        <label for="address">Адрес:</label>
+        <input type="text" id="address" name="address">
+        <br>
+        <label for="party">Партии:</label>
+        <select id="party" name="party" multiple>
+            <!-- Варианты будут заполняться динамически -->
+        </select>
+        <br>
+        <button type="button" onclick="submitArticleForm()">Отправить</button>
+    </form>
+    <script src="{% static 'sahr/js/query.js' %}"></script> <!-- Подключение внешнего JS-файла -->
 </body>
 </html>
