--- a/sahr/templates/sahr/index.html
+++ b/sahr/templates/sahr/index.html
@@ -15,6 +15,8 @@
         <input type="text" name="query" placeholder="Введите запрос" required>
         <button type="submit">Отправить</button>
     </form>
+    <br>
+    <br>
 
     <!-- Форма для проверки артикула -->
     <form id="articleForm">
@@ -23,15 +25,17 @@
         <br>
         <label for="title">Название:</label>
         <input type="text" id="title" name="title" readonly>
+
+        <input type="text" id="base_unit" name="base_unit" hidden>
         <br>
         <label for="comment">Комментарий:</label>
         <input type="text" id="comment" name="comment">
         <br>
         <label for="address">Адрес:</label>
-        <input type="text" id="address" name="address">
+        <input type="text" id="address" name="address" required >
         <br>
         <label for="party">Партии:</label>
-        <select id="party" name="party" multiple>
+        <select id="party" name="party" required multiple>
             <!-- Варианты будут заполняться динамически -->
         </select>
         <br>
