--- a/finder/templates/finder/index.html
+++ b/finder/templates/finder/index.html
@@ -9,6 +9,21 @@
 </head>
 <body>
     <div class="container">
+        <h1>Загрузите ваш файл</h1>
+        <form method="post" enctype="multipart/form-data"  action="{% url 'file-upload' %}">
+            {% csrf_token %}
+            <input type="file" name="doc" accept=".xlsx" required>
+            <br>
+            <input type="submit" value="Загрузить">
+        </form>
+        {% if error %}
+            <p style="color: red;">{{ error }}</p>
+        {% endif %}
+        {% if task_id != 'unknown' %}
+            <p>Ваш файл обрабатывается. ID задачи: {{ task_id }}</p>
+        {% endif %}
+    </div>
+    <div class="container">
         <div class="sidebar">
             <h2>infobase поиск</h2>
             <ul>
