логика celery готова.

--- a/finder/templates/finder/index.html
+++ b/finder/templates/finder/index.html
@@ -27,6 +27,7 @@
             </div>
         </div>
     </div>
+    <h1>{{file_name}}</h1>
     <div class="container">
         <div class="sidebar">
             <h2>infobase поиск</h2>
