--- a/finder/templates/finder/index.html
+++ b/finder/templates/finder/index.html
@@ -31,20 +31,23 @@
     <div class="container">
         <div class="sidebar">
             <h2>infobase поиск</h2>
-                <h3>Пользователь {{ user.username }}</h3>
-                <h3>состоит в группе {{ user_group }}</h3>
-                
+            <h3>Пользователь {{ user.username }}</h3>
+            <h3>состоит в группе <span id="user-group">{{ user_group }}</span></h3>
+        
             <ul>
-                <li><a style="color:white" href="{% url 'sahr_home' %}" data-link-id="1">Сахр</a></li>
-                <li><a style="color:white" href="{% url 'home_commers' %}" data-link-id="2">Комерсанты</a></li>
-                <li><a style="color:white" href="{% url 'home_review' %}" data-link-id="3">Отзывы</a></li>
-                <li><a style="color:white" href="{% url 'notes_home' %}" data-link-id="4">Заметки</a></li>
-                <li><a style="color:white" href="{% url 'get_archive_page' %}" data-link-id="5">Архив</a></li>
-                
+                <li><a style="color:white" href="{% url 'home_finder' %}" data-link-id="1">Поиск</a></li>
+                <li><a style="color:white" href="{% url 'notes_home' %}" data-link-id="2">Заметки</a></li>
+                <li><a style="color:white" href="{% url 'sahr_home' %}" data-link-id="3">Сахр</a></li>
+                <li><a style="color:white" href="{% url 'get_archive_page' %}" data-link-id="4">Архив</a></li>
+                <li><a style="color:white" href="{% url 'home_commers' %}" data-link-id="5">Недопоставки</a></li>
+                <li><a style="color:white" href="#" data-link-id="6">Инвентаризация</a></li>
+                <li><a style="color:white" href="{% url 'home_review' %}" data-link-id="7">Таблица аналогов</a></li>
             </ul>
-            <button>Обновить базу</button>
+            <a style="color:green" href="#" data-link-id="8" >Обновить базу</a>
+            <br>
             <button>Выйти</button>
-            <p>Отзывы и предложения</p>
+            <br>
+            <a style="color:white" href="{% url 'home_review' %}" data-link-id="9">Отзывы и предложения</a>
         </div>
         <div class="content">
             <div class="search-bar">
@@ -57,7 +60,6 @@
                     <button type="submit">Search</button>
                 </form>
             </div>
-           
             <div class="filters">
                 <span>фильтр проектов</span>
                 <span>название проекта</span>
