Ограничия по ссылкам на основе групп готовы.

--- a/finder/templates/finder/index.html
+++ b/finder/templates/finder/index.html
@@ -41,14 +41,14 @@
                 <li><a style="color:white" href="{% url 'get_archive_page' %}" data-link-name="архив">Архив</a></li>
                 <li><a style="color:white" href="{% url 'home_commers' %}" data-link-name="недопоставки">Недопоставки</a></li>
                 <li><a style="color:white" href="#" data-link-name="инвентаризация">Инвентаризация</a></li>
-                <li><a style="color:white" href="{% url 'home_review' %}" data-link-name="таблица аналогов">Таблица аналогов</a></li>
+                <li><a style="color:white" href="#" data-link-name="таблица аналогов">Таблица аналогов</a></li>
                 <li><a style="color:white" href="#" data-link-name="бтк">БТК</a></li>
             </ul>
             <a style="color:green" href="#" data-link-name="обновить базу">Обновить базу</a>
             <br>
             <button>Выйти</button>
             <br>
-            <a style="color:white" href="{% url 'home_review' %}" data-link-name="Отзывы и предложения">Отзывы и предложения</a>
+            <a style="color:white" href="{% url 'home_review' %}" data-link-name="отзывы и предложения">Отзывы и предложения</a>
         </div>
         <span id="allowed-link-names">{{ allowed_link_names|safe }}</span>
         <div class="content">
