Перенос произведен. Начало работы с главной страницей

--- a/finder/templates/finder/index.html
+++ b/finder/templates/finder/index.html
@@ -81,6 +81,9 @@
                     <div class="table-cell">проект</div>
                     <div class="table-cell">комментарий</div>
                 </div>
+                <div>Закрепы!!!</div>
+                <div>Закрепы!!!</div>
+                <div>Закрепы!!!</div>
                 <div class="table-row">
                     <div class="table-cell">P00027570</div>
                     <div class="table-cell">600035849</div>
