--- a/finder/templates/finder/index2.html
+++ b/finder/templates/finder/index2.html
@@ -45,9 +45,11 @@
                 <div>
                     13.02.2025
                 </div>
+                <img src="{% static 'finder/search.svg' %}" alt="Search Icon" style="width: 50px; height: 50px;">
             </div>
         </header>
         <div class="filter_project_container">
+            <img src="{% static 'finder/search.svg' %}" alt="Search Icon">
             <div class="button_wrapper">
                 <img src="{% static 'icon/filter.png'  %}" alt="">
                 <div>Фильтр проектов</div>
@@ -62,8 +64,7 @@
             </div>
             <div class="main_menu">
                 <div class="menu_row">
-                
-                    <img src="{% static 'finder/icon/search.png'  %}" alt="">
+                    <img src="{% static 'finder/icon/search.svg' %}" alt="Search Icon">
                     <div class="menu_link">
                         <a href="#">Поиск</a>
                     </div>
@@ -104,7 +105,15 @@
                         <a href="#">Таблица аналогов</a>
                     </div>
                 </div>
-            </div>    
+                <div>
+                    Будет блок с детализацией
+                  
+                </div>
+                <div class="bottom_menu">
+
+                </div>
+            </div> 
+
         </div> 
     </div>
 </body>
