--- a/finder/static/finder/css/style_finder2.css
+++ b/finder/static/finder/css/style_finder2.css
@@ -1,12 +1,21 @@
-@font-face {
-    font-family: 'Inter';
-    src: url('/static/fonts/inter/Inter_18pt-Light.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+/* CSS переменные для удобства */
+:root {
+    --primary-color: rgb(31, 58, 85);
+    --secondary-color: rgb(251, 184, 160);
+    --text-color: rgb(255, 255, 255);
+    --font-family: 'Inter', sans-serif;
+    --border-color: black;
+}
+
+/* Основные стили */
+body {
+    font-family: var(--font-family);
+    color: var(--text-color);
+    margin: 0;
+    padding: 0;
 }
 
 .wrapper {
-    /* position: relative; */
     width: 100%;
     height: auto;
     display: flex;
@@ -16,64 +25,50 @@
 header {
     margin-left: 254px;
     height: 96px;
-    background: rgb(255, 255, 255);
-    border: 1px solid black;
+    background: var(--text-color);
+    border: 1px solid var(--border-color);
     display: flex;
     align-items: center;
     justify-content: space-between;
-
 }
 
 .sidebar {
     position: absolute;
     width: 254px;
     min-height: 100vh;
-    background: rgb(31, 58, 85);
-    padding: 0px 15px;
+    background: var(--primary-color);
+    padding: 0 15px;
 }
 
 .sidebar p {
     color: rgb(165, 176, 187);
-    font-family: Inter;
     font-size: 12px;
     font-weight: 300;
     line-height: 15px;
-    letter-spacing: 0%;
-    text-align: left;
+    margin-bottom: 5px;
 }
 
-#revievs_link {
-    font-size: 16px;
-}
-
-.menu_row {
+.menu_row, .menu_row_down {
     display: flex;
     align-items: center;
     padding: 4px;
 }
-.menu_row_down {
-    display: flex;
-    align-items: center;
-    margin-bottom: 5px;
-}
-
-
-.menu_link{
-    margin: 0px 10px;
-}
 
 .menu_link a {
-    color: rgb(255, 255, 255);
-    font-family: Inter;
+    color: var(--text-color);
     font-size: 18px;
+    transition: color 0.3s ease;
+    text-decoration: none;
 }
 
+.menu_row:hover .menu_link a {
+    color: var(--secondary-color);
+}
 
 .find_container {
     margin-left: 50px;
     width: 375px;
     height: 96px;
-
 }
 
 .filter_container {
@@ -85,17 +80,15 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-family: Inter;
     font-size: 16px;
 }
 
 .check_box {
     width: 17px;
     height: 14px;
-    
 }
 
-.search_bar{
+.search_bar {
     margin-top: 16px;
 }
 
@@ -103,73 +96,55 @@ header {
     text-align: center;
     margin-right: 40px;
 }
+
 .filter_project_container {
     margin-left: 254px;
     height: 72px;
-    background: rgb(255, 255, 255);
-    border: 1px solid black;
+    background: var(--text-color);
+    border: 1px solid var(--border-color);
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
 
+.button_wrapper, .button_wrapper_clear, .button_wrapper_update {
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 40px;
+    color: var(--text-color);
+    font-size: 16px;
 }
 
 .button_wrapper {
     width: 224px;
-    height: 40px;
-    border-radius: 40px;
-    background: rgb(31, 58, 85);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: rgb(255, 255, 255);
-    font-family: Inter;
-    font-size: 16px;
+    background: var(--primary-color);
     margin-left: 45px;
 }
+
 .button_wrapper_clear {
     width: 224px;
-    height: 40px;
-    border-radius: 40px;
-    background: rgb(251, 184, 160);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 40px;
-    color: rgb(255, 255, 255);
-    font-family: Inter;
-    font-size: 16px;
+    background: var(--secondary-color);
     margin-right: 40px;
 }
+
 .button_wrapper_update {
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 40px;
-    color: rgb(255, 255, 255);
-    font-family: Inter;
-    font-size: 16px;
     background: rgb(12, 207, 19);
     opacity: 0.3;
     margin-bottom: 5px;
 }
 
-.button_wrapper div {
-    margin-left: 6px;
-}
-
-
 .details_item {
-    height: 345px;
     border: 1px solid;
+    display: contents;
 }
 
 .down_menu {
     height: 150px;
     position: fixed;
     bottom: 0;
-}   
+}
 
 .logo {
     text-align: center;
@@ -177,17 +152,61 @@ header {
     padding: 20px 0;
 }
 
-
-.menu_row img {
-    transition: filter 0.3s ease;
+.info_title {
+    color: var(--text-color);
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 22px;
+    text-align: center;
 }
 
-
-
-.menu_row .menu_link a {
-    transition: color 0.3s ease
+.position_title {
+    color: var(--text-color);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 19px;
+    text-align: left;
 }
 
-.menu_row:hover .menu_link a {
-    color:rgb(251, 184, 160); /* Изменяет цвет текста на более светлый */
+.position_title p {
+    color: var(--text-color);
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 17px;
+    text-align: left;
+}
+
+.project_item, .any_projects {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.any_projects {
+    cursor: pointer;
+}
+
+.circle {
+    width: 10px;
+    height: 10px;
+    background-color: rgb(246, 78, 17);
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
+.any_projects p {
+    color: rgb(246, 78, 17);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 19px;
+    text-align: left;
+}
+
+.hide_info {
+    color: rgb(165, 176, 187);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 19px;
+    text-align: center;
+    cursor: pointer;
 }
