--- a/finder/static/finder/css/style_finder2.css
+++ b/finder/static/finder/css/style_finder2.css
@@ -27,7 +27,6 @@ header {
     margin-left: 254px;
     height: 96px;
     background: var(--text-color);
-    border: 1px solid var(--border-color);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -39,6 +38,7 @@ header {
     min-height: 100vh;
     background: var(--primary-color);
     padding: 0 15px;
+    border: 1px solid black;
 }
 
 .sidebar p {
@@ -53,6 +53,7 @@ header {
     display: flex;
     align-items: center;
     padding: 4px;
+    gap: 8px;
 }
 
 .menu_link a {
@@ -60,6 +61,7 @@ header {
     font-size: 18px;
     transition: color 0.3s ease;
     text-decoration: none;
+    margin-right: 5px;
 }
 
 .menu_row:hover  .menu_link a {
@@ -68,8 +70,8 @@ header {
 
 .menu_row_down:hover  .menu_link a {
     color: var(--secondary-color);
-
 }
+
 
 .find_container {
     margin-left: 50px;
@@ -107,13 +109,13 @@ header {
     margin-left: 254px;
     height: 72px;
     background: var(--text-color);
-    border: 1px solid var(--border-color);
+    /* border: 1px solid var(--border-color); */
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.button_wrapper, .button_wrapper_clear, .button_wrapper_update {
+.button_wrapper, .button_wrapper_clear,.button_wrapper_update{
     height: 40px;
     display: flex;
     align-items: center;
@@ -123,8 +125,13 @@ header {
     font-size: 16px;
 }
 
+
+
+
+
 .button_wrapper {
     width: 224px;
+    height: 40px;
     background: var(--primary-color);
     margin-left: 45px;
 }
@@ -136,13 +143,14 @@ header {
 }
 
 .button_wrapper_update {
+    width: 224px;
     background: rgb(12, 207, 19);
     opacity: 0.3;
     margin-bottom: 5px;
 }
 
 .details_item {
-    border: 1px solid;
+    /* border: 1px solid; */
     display: block;
 }
 
@@ -193,10 +201,10 @@ header {
 }
 
 .circle {
-    width: 10px;
+    width: 11px;
     height: 10px;
     background-color: var(--red-color);
-    border-radius: 50%;
+    border-radius: 100%;
     margin-right: 5px;
 }
 
@@ -218,7 +226,7 @@ header {
 }
 
 .main {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin-left: 254px;
 
 }
@@ -228,17 +236,20 @@ header {
     height: 82vh; /* Высота экрана */
     overflow: hidden; /* Скрываем прокрутку для основного контейнера */
 }
+
 .manual {
     position: absolute;
     top: 0;
-    left: 0;
-    right: 0;
     bottom: 0;
     overflow-y: auto; /* Включаем вертикальную прокрутку для изображения */
+    display: block;
+}
+
+.table-container {
+    display: block;
 }
 
 .manual img {
-    display: block;
     width: 100%;
     height: auto;
 }
