--- a/finder/templates/finder/index2.html
+++ b/finder/templates/finder/index2.html
@@ -53,9 +53,9 @@
             </div>
         </div>
         <div class="main">
-            <div class="manual">
+            {% comment %} <div class="manual">
                 <img src="{% static 'finder/img/manual.jpg' %}" alt="Инструкция">
-            </div> 
+            </div>  {% endcomment %}
             <div class="table-container">
                 <table>
                     <thead>
@@ -80,35 +80,23 @@
                     </tbody>
                     <tbody>
                         <tr class="table-row">
-                            <td class="icon-column">
-                                <button onclick="pinRow(this)">
-                                <img src="{% static 'finder/icon/keep.svg' %}" alt="">  
-                            </button>
-                        </td>
-                            <td class="icon-column">
-                                <img src="{% static 'finder/icon/comment2.svg' %}" alt="">  
-                            </td>
+                            <td class="icon-column"></td>
+                            <td class="icon-column"></td>
                             <td class="data-column"></td>
                             <td class="data-column"></td>
                             <td class="data-column"></td>
                             <td class="data-column"></td>
-                            <td class="icon-column">
-                                <img src="{% static 'finder/icon/content_copy.svg' %}" alt="">  
-                            </td>
+                            <td class="icon-column"></td>
                             <td class="data-column"></td>
                             <td class="data-column"></td>
                             <td class="data-column"></td>
-                            <td class="icon-column">
-                                <div class="circle_table"></div>
-                            </td>
+                            <td class="icon-column"></td>
                             <td class="data-column"></td>
                             <td class="data-column"></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
-        
-     
         </div>
         <div class="sidebar">
             <div class="logo">
@@ -208,7 +196,8 @@
     </script>
     <script src='{% static "finder/js/popups.js"%}'></script> 
     <script src='{% static "finder/js/search_finder_input.js"%}'></script> 
-    <script src='{% static "finder/js/switch_manual_finger.js"%}'></script> 
+    {% comment %} <script src='{% static "finder/js/add_pin_positions.js"%}'></script>  {% endcomment %}
+    {% comment %} <script src='{% static "finder/js/switch_manual_finger.js"%}'></script>  {% endcomment %}
 </body>
 </html>
 
